--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,4 @@ jobs:
        run: ./gradlew build sonarqube --info
 
    #     - - name: Make gradlew executable
-         run: chmod +x ./gradlew
+     #    run: chmod +x ./gradlew
