--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew build
+               - name: Make gradlew executable
+               run: chmod +x ./gradlew
        # run: ./gradlew build
 #          - - name: Make gradlew executable
 #              run: chmod +x ./gradlew
